<resources>
    <string name="package_name">me.felwal.trackfield</string>
    <string name="app_name">Trackfield</string>
    <string name="app_version">0.0.0</string>
    <string name="link_source">https://github.com/felwal/trackfield</string>
    <string name="link_privacy_polcy">about:blank</string>
    <string name="activity_title_onboarding">Onboarding</string>
    <string name="activity_title_exercisedetail">Exercise</string>
    <string name="activity_title_exerciseadd">Add</string>
    <string name="activity_title_exerciseedit">Edit</string>
    <string name="activity_title_map">Map</string>
    <string name="fragment_title_exerciselist">Exercises</string>
    <string name="fragment_title_groupingpager">Groupings</string>
    <string name="fragment_title_statistics">Statistics</string>
    <string name="fragment_title_settings">Settings</string>
    <string name="fragment_title_settings_strava">Strava</string>
    <string name="tab_title_groupingpager_distances">Distances</string>
    <string name="tab_title_groupingpager_routes">Routes</string>
    <string name="tab_title_groupingpager_places">Places</string>
    <string name="tab_title_groupingpager_intervals">Intervals</string>
    <string name="et_text_exerciseedit_route">Route</string>
    <string name="et_hint_exerciseedit_route">Route</string>
    <string name="et_hint_exerciseedit_routevar">Route variation</string>
    <string name="et_hint_exerciseedit_date">Date</string>
    <string name="et_text_exerciseedit_time" />
    <string name="et_hint_exerciseedit_time">Time</string>
    <string name="et_hint_exerciseedit_interval">Interval</string>
    <string name="et_hint_exerciseedit_note">Note</string>
    <string name="et_text_exerciseedit_distance" />
    <string name="et_hint_exerciseedit_distance">Distance</string>
    <string name="et_suffix_exerciseedit_distance">km</string>
    <string name="et_hint_exerciseedit_hours">hh</string>
    <string name="et_suffix_exerciseedit_hours">h</string>
    <string name="et_hint_exerciseedit_minutes">mm</string>
    <string name="et_suffix_exerciseedit_minutes">min</string>
    <string name="et_hint_exerciseedit_seconds">ss.ss</string>
    <string name="et_suffix_exerciseedit_seconds">s</string>
    <string name="et_hint_exerciseedit_device">Device</string>
    <string name="et_hint_exerciseedit_recordingmethod">Recording method</string>
    <string name="et_hint_exerciseedit_type">Sport</string>
    <string name="et_hint_exerciseedit_label">Label</string>
    <string name="tv_text_onboarding_subtitle">Welcome to</string>
    <string name="tv_text_onboarding_title">Trackfield!</string>
    <string name="tv_text_onboarding_caption">@string/app_version</string>
    <string name="tv_text_settings_header_display">Display options</string>
    <string name="tv_text_settings_title_week_headers">Week headers</string>
    <string name="tv_text_settings_title_singletion_groups">Hide singleton groups</string>
    <string name="tv_text_settings_header_data">Data</string>
    <string name="tv_text_settings_title_driving_prefer_same_type">Prefer same sport when driving</string>
    <string name="tv_text_settings_msg_driving_prefer_same_type">When there is data for the specified sport and route
        variation</string>
    <string name="tv_text_settings_title_driving_fall_back_to_route">Fall back to route when driving</string>
    <string name="tv_text_settings_msg_driving_fall_back_to_route">When there is no data for the specified route
        variation</string>
    <string name="tv_text_settings_header_appearance">Appearance</string>
    <string name="tv_text_settings_title_theme">Theme</string>
    <string name="tv_text_settings_title_color">Color</string>
    <string name="tv_text_settings_header_services">Third party services</string>
    <string name="tv_text_settings_title_strava">Strava</string>
    <string name="tv_text_settings_header_file">File</string>
    <string name="tv_text_settings_title_file_location">File location</string>
    <string name="tv_text_settings_hint_file_location">Documents/Trackfield</string>
    <string name="tv_text_settings_title_export">Export json</string>
    <string name="tv_text_settings_title_import">Import json</string>
    <string name="tv_text_settings_header_profile">Profile</string>
    <string name="tv_text_settings_title_mass">Mass</string>
    <string name="tv_text_settings_msg_mass">Used for calculating energy and power.</string>
    <string name="tv_text_settings_hint_mass">Kg</string>
    <string name="tv_text_settings_title_birthday">Birthday</string>
    <string name="tv_text_settigns_header_about">About</string>
    <string name="tv_text_settings_title_version">Version</string>
    <string name="tv_text_settings_title_licenses">Open source licenses</string>
    <string name="tv_text_settings_msg_licenses">Licenses for third party software</string>
    <string name="tv_text_settings_title_privacy_policy">Privacy policy</string>
    <string name="tv_text_settings_title_source">Source code</string>
    <string name="tv_text_settings_msg_source">On Github</string>
    <string name="tv_text_settings_header_developer">Developer options</string>
    <string name="tv_text_settings_title_reboard">Reboard</string>
    <string name="tv_text_settings_title_generate_places">Generate places</string>
    <string name="tv_text_settings_title_recreate">Recreate database</string>
    <string name="tv_text_settings_header_connection">Connection</string>
    <string name="tv_text_settings_title_auth">Authorize</string>
    <string name="tv_text_settings_header_requests">Request activities</string>
    <string name="tv_text_settings_title_request_specific">Request specific</string>
    <string name="tv_text_settings_hint_request_specific">Strava activity id</string>
    <string name="tv_text_settings_title_request_new">Request new</string>
    <string name="tv_text_settings_title_request_all">Request all</string>
    <string name="tv_text_settings_title_pull_all">Pull all from Strava</string>
    <string name="tv_text_settings_header_request_options">Request options</string>
    <string name="tv_text_settings_title_device">Default device</string>
    <string name="tv_text_settings_hint_device">Samsung Galaxy S2, S3 etc …</string>
    <string name="tv_text_settings_title_recordingmethod">Default recording method</string>
    <string name="tv_text_settings_hint_recordingmethod">GPS, Galileo, Glonass etc …</string>
    <string name="tv_text_settings_title_request_options">Also request</string>
    <string name="tv_text_empty_exerciselist_title">Welcome to Trackfield!</string>
    <string name="tv_text_empty_exerciselist_message">Add exercises manually with + or connect to Strava in Settings
        to get started.</string>
    <string name="tv_text_empty_search_title">No results</string>
    <string name="tv_text_empty_search_msg">Check spelling and filters. You can search for: #id, route, rotue
        variation, note, sport, label, device and recording method.</string>
    <string name="tv_text_empty_distancelist_title">No distances</string>
    <string name="tv_text_empty_distancelist_msg">Press + to add a distance.</string>
    <string name="tv_text_empty_routelist_title">No routes</string>
    <string name="tv_text_empty_routelist_msg">Your routes will show up here.</string>
    <string name="tv_text_empty_placelist_title">No places</string>
    <string name="tv_text_empty_placelist_msg">Press + to add a place.</string>
    <string name="tv_text_empty_intervallist_title">No intervals</string>
    <string name="tv_text_empty_intervallist_msg">Your intervals will show up here.</string>
    <string name="tv_text_empty_distancedetail_title">No exercises</string>
    <string name="tv_text_empty_distancedetail_msg">Check filters, or set a goal.</string>
    <string name="tv_text_empty_routedetail_title">No exercises</string>
    <string name="tv_text_empty_routedetail_msg">Check filters.</string>
    <string name="tv_text_empty_placedetail_title">No exercises</string>
    <string name="tv_text_empty_placedetail_msg">Check filters.</string>
    <string name="tv_text_empty_intervaldetail_title">No exercises</string>
    <string name="tv_text_empty_intervaldetail_msg">Check filters.</string>
    <string name="tv_text_fab_add">Add exercise</string>
    <string name="tv_text_fab_request_strava">Request new</string>
    <string name="tv_text_dialog_filter_msg">Sports</string>
    <string name="btn_text_onboarding_start">Get started</string>
    <string name="sw_text_drive">Drive distance</string>
    <string name="sw_text_dialog_filter_paceless">Include paceless</string>
    <string name="sw_text_dialog_filter_longer">Include longer</string>
    <string name="cp_timedialog">Time</string>
    <string name="cp_dialog_pace">Pace</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="action_exerciseedit">Edit</string>
    <string name="action_rename">Rename</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_hide_route">Hide route</string>
    <string name="action_hide_place">Hide place</string>
    <string name="action_show_hidden">Show hidden</string>
    <string name="action_hide_hidden">Hide hidden</string>
    <string name="action_set_goal">Set goal</string>
    <string name="action_delete">Delete</string>
    <string name="action_include_longer">Include longer</string>
    <string name="action_pull_strava">Pull from Strava</string>
    <string name="action_push_strava">Push to Strava</string>
    <string name="action_hide_trail">Hide trail</string>
    <string name="action_map_history">Toggle history</string>
    <string name="action_map_recentre">Recentre map</string>
    <string name="action_map_type">Toggle satellite</string>
    <string name="action_map_route">Open route map</string>
    <string name="action_map_routevar">Open routevar map</string>
    <string name="action_map_place">Open place map</string>
    <string name="action_exerciseedit_radius">Edit radius</string>
    <string name="action_recalibrate_endpoints">Recalibrate endpoints</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_rename">Rename</string>
    <string name="dialog_btn_add">Add</string>
    <string name="dialog_btn_set">Set</string>
    <string name="dialog_btn_finish">Finish</string>
    <string name="dialog_btn_filter">Filter</string>
    <string name="dialog_btn_reset">Reset</string>
    <string name="dialog_btn_discard">Discard</string>
    <string name="dialog_btn_merge">Merge</string>
    <string name="dialog_btn_export">Export</string>
    <string name="dialog_btn_import">Import</string>
    <string name="dialog_btn_pull">Pull</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_title_delete_exercise">Delete exercise?</string>
    <string name="dialog_title_rename_route">Rename route</string>
    <string name="dialog_title_rename_place">Rename place</string>
    <string name="dialog_title_exerciseedit_radius">Edit radius (m)</string>
    <string name="dialog_title_rename_interval">Rename interval</string>
    <string name="dialog_title_add_distance">Add distance (km)</string>
    <string name="dialog_title_delete_distance">Delete distance?</string>
    <string name="dialog_title_set_goal">Set pace goal</string>
    <string name="dialog_title_add_place">Add place</string>
    <string name="dialog_title_delete_place">Delete place?</string>
    <string name="dialog_title_filter">Filter by</string>
    <string name="dialog_title_filter_types">Filter by sport</string>
    <string name="dialog_title_filter_labels">Filter by label</string>
    <string name="dialog_title_discard">Discard edits?</string>
    <string name="dialog_title_theme">Theme</string>
</resources>