<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_place"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add"
        android:iconTint="?colorOnPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show_hidden_groups"
        android:title="@string/action_show_hidden"
        android:icon="@drawable/ic_hide"
        android:iconTint="?colorOnPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter_exercises"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        android:iconTint="?colorOnPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="?colorOnPrimary"
        app:showAsAction="always" />

</menu>