<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_exercises"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        android:iconifiedByDefault="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:queryHint="@string/action_search"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_filter_exercises"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />

</menu>