<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_recentre"
        android:title="@string/action_map_recentre"
        android:icon="@drawable/ic_map_recentre_24dp"
        app:showAsAction="always"/>

    <!--
    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_24dp"
        app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_heatmap"
        android:title="@string/action_map_history"
        android:icon="@drawable/ic_heatmap_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_maptype"
        android:title="@string/action_map_type"
        android:icon="@drawable/ic_map_type_24dp"
        app:showAsAction="always"/>

</menu>